alteracao de cor e mudanca de style

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/style.css
@@ -1,12 +1,32 @@
+body{
+    background-color: #219ebc;
+}
+
 h1 {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
+    color: #fff;
+}
+
+h3 {
+    text-align: center;
+    color: white;
+}
+
+p {
+    color: white;
 }
 
 #foto {
     display:block;
     margin: 0 auto;
     border-radius: 50%;
+}
+
+.hab-itens ul {
+    display:table; 
+    margin: 0 auto;
+    color: white;
 }
 
 .menu ul {
@@ -19,4 +39,9 @@ h1 {
 
 .menu ul li {
     display:inline;
+}
+
+.menu ul li a {
+    color: white;
+    text-decoration: none;
 }
