--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/style.css
@@ -9,11 +9,13 @@ h1 {
 }
 
 h3 {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
     color: white;
 }
 
 p {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
 }
 
@@ -26,6 +28,7 @@ p {
 .hab-itens ul {
     display:table; 
     margin: 0 auto;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
 }
 
@@ -42,6 +45,7 @@ p {
 }
 
 .menu ul li a {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
     text-decoration: none;
 }
