adicionando um pouco mais de css

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/portfolio/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #219ebc;
+    background-color: #023047;
 }
 
 h1 {
@@ -23,6 +23,8 @@ p {
     display:block;
     margin: 0 auto;
     border-radius: 50%;
+    border: 2px solid #219ebc;
+    padding: 5px;
 }
 
 .hab-itens ul {
@@ -42,6 +44,8 @@ p {
 
 .menu ul li {
     display:inline;
+    padding: 5px;
+    font-weight: bold;
 }
 
 .menu ul li a {
