corrigindo caminho da tag no css

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-5/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-5/style.css
@@ -2,10 +2,10 @@ ol{
     background-color: yellow;
 }
 
-li:nth-child(even){
+ol li:nth-child(even){
     color: green;
 }
 
-li:nth-child(odd){
+ol li:nth-child(odd){
     text-transform: lowercase;
 }
