adicionando cor vermelha aos headers e aumentando a fonte e adicionando borda aos headers italicos

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-5/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-5/style.css
@@ -9,3 +9,12 @@ ol li:nth-child(even){
 ol li:nth-child(odd){
     text-transform: lowercase;
 }
+
+h1, h3{
+    color: red;
+}
+
+h1, h3 em{
+    font-size: 30px;
+    border: 1px solid black;
+}
