adicionando cor de fundo aos itens da lista de programacao que contem java

--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-5/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercicio-fixacao-5/style.css
@@ -28,5 +28,9 @@ li em{
 }
 
 ul:first-of-type li:nth-child(-n+3){
-    background-color: blue;
+    color: blue;
+}
+
+.java {
+    background-color: pink;
 }
