--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
@@ -1,7 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: rgba(0, 204, 255, 0.533);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .class-cient{
     float: right;
-    border: 2px solid black;
-    padding: 10px;
+    /* border: 2px solid black; */
+    background-color: rgba(88, 89, 92, 0.158);
+    box-shadow: 4px 5px 4px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    padding: 20px;
     margin-top: 50px;
     margin-right: 50px;
 }
@@ -11,8 +24,9 @@
 }
 
 .fatos img-1{
+    display: inline;
     margin-left: 20%;
-    width: 600px;
+    width: 30%;
 }
 
 .veloc img, .soco  img, .superpoder img {
@@ -20,4 +34,31 @@
     margin-left: auto;
     margin-right: auto;
     width: 500px;
+}
+
+.content{
+    display: block;
+    width: 60%;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: white;
+    padding: 50px;
+    border-radius: 15px;
+    box-shadow: 4px 5px 4px rgba(0,0,0,0.3);
+}
+
+footer{
+    margin-top: 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 20px;
+    color: white;
+    background-color: rgba(0, 139, 173, 0.533);
+}
+
+footer p{
+    font-size: 15px;
+    font-weight: 500;
 }
