--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
@@ -3,9 +3,45 @@
     padding: 0;
 }
 
+h3, p{
+    margin-top: 15px;
+}
+
 body{
     background-color: rgba(0, 204, 255, 0.533);
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.titulo{
+    text-align: center;
+    color: white;
+    background-color: rgba(88, 89, 92, 0.158);
+    height: 80px;
+    padding-top: 15px;
+}
+
+.menu {
+    position: absolute;
+    width: 100%;
+    background-color: rgba(0, 139, 173, 0.533);
+    text-align: center;
+    height: 50px;
+    
+}
+
+.menu li{
+    display: inline-block;  
+    margin-top: 15px;
+}
+
+.menu a{
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+}
+
+.menu a:hover{
+    background-color: rgba(0, 138, 173, 0.795);
 }
 
 .class-cient{
@@ -27,6 +63,7 @@ body{
     display: inline;
     margin-left: 20%;
     width: 30%;
+    margin-top: 15px;
 }
 
 .veloc img, .soco  img, .superpoder img {
@@ -34,6 +71,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     width: 500px;
+    margin-top: 15px;
 }
 
 .content{
@@ -45,6 +83,7 @@ body{
     padding: 50px;
     border-radius: 15px;
     box-shadow: 4px 5px 4px rgba(0,0,0,0.3);
+    margin-top: 75px;
 }
 
 footer{
