--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
@@ -54,8 +54,9 @@ body{
     background-color: rgba(88, 89, 92, 0.158);
     box-shadow: 4px 5px 4px rgba(0,0,0,0.3);
     border-radius: 10px;
-    padding: 20px;
-    margin-top: 50px;
+    padding: 25px;
+    margin-top: 2%;
+    margin-bottom: 2%;
     margin-right: 50px;
 }
 
@@ -71,9 +72,8 @@ body{
 
 .fatos img{
     display: inline;
-    margin-left: 5%;
     margin-right: 5%;
-    width: 500px;
+    width: 50%;
     margin-top: 15px;
 }
 
@@ -125,4 +125,26 @@ footer p{
 
 .ref a:hover{
     font-size: 15px;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    font-size: 12px;
+    width: 100%;
+    margin-top: 10px;
+}
+
+td, th {
+    border: 1px solid #000000;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #c5c2c5;
+}
+
+tr:nth-child(odd) {
+    background-color: #ffffff;
 }
