--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
@@ -25,23 +25,23 @@ body{
 }
 
 .menu {
-    position: absolute;
-    width: 100%;
     background-color: rgba(0, 139, 173, 0.533);
-    text-align: center;
-    height: 50px;
-    
+    text-align: center;    
+}
+
+.menu ul{
+    overflow: hidden;
 }
 
 .menu li{
     display: inline-block;  
-    margin-top: 15px;
 }
 
 .menu a{
+    display: block;
     text-decoration: none;
     color: white;
-    padding: 10px;
+    padding: 20px 16px;
 }
 
 .menu a:hover{
@@ -94,7 +94,7 @@ body{
     padding: 50px;
     border-radius: 15px;
     box-shadow: 4px 5px 4px rgba(0,0,0,0.3);
-    margin-top: 75px;
+    margin-top: 35px;
 }
 
 footer{
