--- a/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
+++ b/fundamentos/introducao-a-html-e-css/bloco-3-introducao-a-html-e-css/dia-4-html-css-semantico/exercicios-dia-4/style.css
@@ -85,15 +85,31 @@ body{
 }
 
 .content{
-    display: block;
-    width: 60%;
-    margin-right: auto;
-    margin-left: auto;
+    display: inline-block;
+    width: 50%;
+    margin-left: 10%;
+    margin-right: 2%;
     background-color: white;
     padding: 50px;
     border-radius: 15px;
     box-shadow: 4px 5px 4px rgba(0,0,0,0.3);
     margin-top: 35px;
+}
+
+.video{
+    position: fixed;
+    display: inline-block;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 4px 5px 4px rgba(0,0,0,0.3);
+    padding: 20px;
+    width: 30%;
+    text-align: center;
+    margin-top: 35px;
+}
+
+.video h3{
+    margin-bottom: 15px;
 }
 
 footer{
