correcao ex 9 do dia

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/exercicios-dia/style.css
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/exercicios-dia/style.css
@@ -93,6 +93,11 @@ label {
   width: 45px;
 }
 
+.selected {
+  height: 45px !important;
+  width: 45px !important;
+}
+
 .my-tasks span {
   color: #666;
   font-size: 18px;
