--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercicios-dia/style.css
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercicios-dia/style.css
@@ -1,28 +1,58 @@
 #text {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  display: inline-block;
+  margin-left: 20%;
 }
 
 #menu {
   float: right;
-  margin: 0 1.5%;
-  width: 30%
+  margin-right: 20%;
+  margin-top: 50px;
 }
 
-#menu p {
-  display: inline;
-  width: 50%;
+#config {
+  display: block;
+  position: fixed;
+  background-color: white;
+  border-radius: 5px;
+  width: 50px;
+  height: 50px;
+  margin-top: -55px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-#menu input{
-  display: inline;
-  margin-top: 20px;
-  margin-left: 10px;
+#config i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 30px;
+}
+
+#config:hover {
+  background-color: rgb(240, 235, 235);
 }
 
 .content p {
   text-align: justify;
   width: 800px;
+}
+
+table {
+  position: fixed;
+  background-color: white;
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  border-radius: 5px;
+  width: 10%;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.3s linear;
+}
+
+td, th {
+  text-align: left;
+  padding: 8px;
+}
+
+td:nth-child(even){
+  text-align: center;
 }
