--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-4-css-flexbox-parte-2/exercicios dia/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-4-css-flexbox-parte-2/exercicios dia/style.css
@@ -60,6 +60,7 @@ body {
 .movie-container {
   display: flex;
   flex-direction: column;
+  flex-basis: 700px;
 }
 
 .movie-container h2 {
@@ -81,6 +82,7 @@ body {
   height: 150px;
   justify-content: center;
   margin: 10px;
+  flex-basis: 16%;
 }
 
 .aside-container {
