adicionando ex 8 do dia

--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-4-css-flexbox-parte-2/exercicios dia/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-4-css-flexbox-parte-2/exercicios dia/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -61,6 +64,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-basis: 700px;
+  flex-grow: 10;
 }
 
 .movie-container h2 {
