adicionando requisito 6 do ex 1

--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-5-css-responsivo-mobile-first/exercicios dia/exercise1.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-5-css-responsivo-mobile-first/exercicios dia/exercise1.css
@@ -15,7 +15,7 @@ body {
 }
 
 article {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 h1 {
@@ -45,4 +45,23 @@ figure {
 
 figcaption {
   font-size: .8em;
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    background-color: rgb(195, 195, 195);
+  }
+  article {
+    font-size: 30px;
+  }
+  figure {
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
+  }
+  .images {
+    display: flex;
+    width: 1000px;
+    flex-wrap: wrap;
+  }
 }
