--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-5-css-responsivo-mobile-first/exercicios dia/exercise2.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-reponsivo/dia-5-css-responsivo-mobile-first/exercicios dia/exercise2.css
@@ -26,12 +26,17 @@ h3 {
 
 p {
   text-align: justify;
+  font-size: 15px;
 }
 
 .aside-one, .aside-two {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.aside-one li, .aside-two li {
+  font-size: 15px;
 }
 
 header h1 {
@@ -57,8 +62,28 @@ header p {
   flex-direction: column;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 700px) {
   body {
-    background-color: brown;
+    padding: 40px;
+  }
+  .asides {
+    display: flex;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  
+  h2 {
+    font-size: 25px;
+  }
+  
+  h3 {
+    font-size: 20px;
+    text-align: center;
+  }
+  
+  .aside-one li, .aside-two li, header li, p {
+    text-align: justify;
+    font-size: 20px;
   }
 }
